<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">fyto</string>
    <string name="light">Lighting Mode</string>
    <string name="light_history">Light History</string>
    <string name="water_history">Saturation History</string>
    <string name="schedule">Schedule</string>
    <string name="automatic_demo">Automatic Demo</string>
    <string name="lux_value">Lux Value</string>
    <string name="tap_an_item_from_action_bar_menu">Tap an item from action bar menu.</string>
    <string name="action_settings">Settings</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>

    <string-array name="GeneralSettings">
        <item>Pot Size</item>
        <item>Plant Thirst</item>
        <item>Watering Frequency</item>
    </string-array>

</resources>